--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,15 +1,17 @@
 {% include 'recipes/partials/head.html' %}
 
 <body>
-  <header class="main-header-container">
-    <div class="main-header container">
-      <h1>
-          <a class="main-logo" href="/">
-              <i class="fas fa-thin fa-hand-fist fa-bounce"></i> 
-              <span>Recipes {{ name }}</span>
-          </a>
-      </h1>
-    </div>
-  </header>
+      {% include 'recipes/partials/header.html' %}
+      {% include 'recipes/partials/search.html' %}
+
+      <main class="main-content-container">
+            <div class="main-content main-content-list container">
+                  {% include 'recipes/partials/recipe.html' %}
+                  {% include 'recipes/partials/recipe.html' %}
+                  {% include 'recipes/partials/recipe.html' %}
+            </div>
+      </main>
+      {% include 'recipes/partials/footer.html' %}
 </body>
+
 </html>
