--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -18,6 +18,7 @@
             rel="stylesheet">
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
       <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
       <title>Recetas</title>
