--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,46 +1,44 @@
 <div class="recipe recipe-list-item">
       <div class="recipe-cover">
-            <img src="https://placehold.co/1280x720/269fe6/00000/png" alt="Temporal">
+            <img src="{{ recipe.cover.url }}" alt="Temporal">
       </div>
       <div class="recipe-title-container">
-            <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+            <h2 class="recipe-title"> {{ recipe.title }} </h2>
       </div>
 
       <div class="recipe-author">
             <span class="recipe-author-item">
                   <i class="fas fa-user"></i>
-                  Marcos vmx
+                  {{ recipe.author.first_name }}
             </span>
             <span class="recipe-author-item">
                   <i class="fas fa-calendar-alt"></i>
-                  16/10/2021 às 11:21
+                  {{ recipe.created_at|date:"d/m/Y " }} às {{ recipe.created_at|date:" H:i:s" }}
             </span>
             <span class="recipe-author-item">
                   <a href="/recipes/category/cafe-da-manha/">
                         <i class="fas fa-layer-group"></i>
-                        <span>Café da manhã</span>
+                        <span>{{ recipe.category.name }}</span>
                   </a>
             </span>
       </div>
 
       <div class="recipe-content">
             <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, vero. Quae
-                  expedita at accusantium aperiam dolorem praesentium molestias culpa id veritatis
-                  reprehenderit, iste molestiae, eaque, magnam in! Vero, aliquam labore.
+                  {{ recipe.description }}
             </p>
       </div>
       <div class="recipe-meta-container">
             <div class="recipe-meta recipe-preparation">
                   <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
                   <div class="recipe-meta-text">
-                        0 Minutos
+                        {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
                   </div>
             </div>
             <div class="recipe-meta recipe-servings">
                   <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
                   <div class="recipe-meta-text">
-                        0 Porções
+                        {{ recipe.servings }} {{ recipe.servings_unit }}
                   </div>
             </div>
       </div>
